# w2z

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  default.nix  flake.nix  w2z.toml.example
.github/workflows/: pull_request.yml  push_main.yml
src/: html.rs  main.rs  templating.rs
src/backends/: github.rs
static/quill/: editor.js
tailwind/: input.css
