[package]
name = "w2z-service"
version = "0.4.1"
edition = "2021"
description = "Static Site CMS"
license = "Apache-2.0"

[[bin]]
name = "w2z"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["macros"]}
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive", "env"]}
maud = { version = "0.26.0", features = ["axum"] }
octocrab = "0.36.0"
once_cell = "1.19.0"
openidconnect = "3.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
service_conventions = { version = "0.0.8", features = ["tracing", "oidc"]}
tera = "1.19.1"
#service_conventions = { git = "https://github.com/philipcristiano/rust_service_conventions.git", branch = "router-state", features = ["tracing", "oidc"]}
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }
tower-cookies = { version = "0.10.0", features = ["signed", "private"]}
tower-http = { version = "0.5.2", features = ["tracing", "trace"] }
tracing = "0.1.40"
url = "2.5.0"
uuid = {version = "1.8.0", features = ["v4"]}
