[package]
name = "w2z-service"
version = "0.10.3"
edition = "2021"
description = "Static Site CMS"
license = "Apache-2.0"

[[bin]]
name = "w2z"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.8.0", features = ["macros"]}
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"]}
maud = { version = "0.27.0", features = ["axum"] }
octocrab = "0.44.0"
once_cell = "1.19.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
service_conventions = { version = "0.0.32", features = ["tracing", "oidc"]}
tera = "1.19.1"
#service_conventions = { git = "https://github.com/philipcristiano/rust_service_conventions.git", branch = "router-state", features = ["tracing", "oidc"]}
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.9.0"
tonic = { version = "0.12.0", features = ["tls", "tls-roots"] }
tower-cookies = { version = "0.11.0", features = ["signed", "private"]}
tower-http = { version = "0.6.0", features = ["tracing", "trace"] }
tracing = "0.1.40"
url = "2.5.0"
uuid = {version = "1.8.0", features = ["v4"]}

rust-embed = { version = "8.3.0", features = ["axum", "mime-guess", "mime_guess"] }
axum-embed = "0.1.0"
redacted = "0.2.0"
jsonwebtoken = "9.3.0"
indexmap = { version = "2.5.0", features = ["serde"] }
serde_qs = { version = "0.15.0", features = ["axum", "tracing"] }
thiserror = "2.0.0"
http = "1.1.0"
